--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600&display=swap" rel="stylesheet">
 
 <style>
-/* 🌌 Corpo e sfondo stelle animate */
+/* Corpo e sfondo */
 body {
   font-family: 'Orbitron', sans-serif;
-  background: black;
+  background: radial-gradient(#000000, #0b0b0b); /* sfondo spaziale scuro */
   color: #f5f5f5;
   max-width: 600px;
   margin: 0 auto;
@@ -26,26 +26,14 @@ body {
   position: relative;
 }
 
-/* Stelle animate */
+/* Stelle animate: semplice pattern visibile subito */
 body::before {
-  content: "";
-  position: fixed;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
-  background: transparent;
-  box-shadow:
-    10vw 20vh white,50vw 30vh white,70vw 80vh white,
-    20vw 70vh white,90vw 10vh white,40vw 40vh white,
-    60vw 60vh white,30vw 20vh white,80vw 50vh white,
-    15vw 85vh white;
-  animation: stars 10s linear infinite;
-  z-index: -1;
-}
-
-@keyframes stars {
-  0% { transform: translateY(0) translateX(0); }
-  50% { transform: translateY(-2px) translateX(1px); }
-  100% { transform: translateY(0) translateX(0); }
+  content:"";
+  position:fixed;
+  top:0; left:0;
+  width:100%; height:100%;
+  background: url('https://i.imgur.com/5MZkW5X.png') repeat; /* pattern di stelle */
+  z-index:-1;
 }
 
 /* Titoli */
@@ -55,6 +43,18 @@ h1 {
   margin-bottom: 10px;
 }
 h2 { margin-top:0; }
+
+/* Domande con sfondo semitrasparente */
+.domanda {
+  display:none;
+  animation: fadeIn 0.5s ease;
+  background: rgba(0,0,0,0.6);
+  padding: 15px;
+  border-radius: 12px;
+  margin-bottom: 15px;
+}
+.domanda.attiva { display:block; }
+@keyframes fadeIn { from{opacity:0; transform:translateY(10px);} to{opacity:1; transform:translateY(0);} }
 
 /* Risposte */
 label {
@@ -68,4 +68,145 @@ label {
   transition: all 0.3s ease;
 }
 label:hover { background: rgba(255,255,255,0.12); }
-input[type="radio]()
+input[type="radio"] { accent-color:#ffe81f; margin-right:10px; }
+
+/* Pulsante */
+button {
+  margin-top: 25px;
+  padding: 12px 30px;
+  font-size: 16px;
+  font-family: 'Orbitron', sans-serif;
+  background: linear-gradient(90deg, #3f8cff, #1b3cff);
+  border: none;
+  border-radius: 30px;
+  color: white;
+  cursor: pointer;
+  box-shadow: 0 0 15px rgba(63,140,255,0.6);
+  transition: transform 0.2s, box-shadow 0.2s;
+}
+button:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 25px rgba(63,140,255,0.9);
+}
+
+/* Barra di progresso */
+#progress-container {
+  width: 100%;
+  height: 8px;
+  background: #222;
+  border-radius: 4px;
+  overflow: hidden;
+  margin: 20px 0 30px;
+}
+#progress-bar {
+  height:100%;
+  width:0%;
+  background: linear-gradient(90deg,#3f8cff,#ffe81f,#c62828);
+  transition: width 0.4s ease;
+}
+
+/* Output risultato */
+#output { 
+  white-space: pre-line; 
+  margin-top: 20px; 
+  font-size:15px;
+  padding: 15px;
+  border-radius: 12px;
+  background: rgba(0,0,0,0.6);
+}
+</style>
+</head>
+
+<body>
+<h1>Quiz della Forza</h1>
+<p style="font-size:12px; opacity:0.7;">Scopri se sei Jedi, Sith o Jedi Grigio</p>
+
+<div id="progress-container">
+  <div id="progress-bar"></div>
+</div>
+
+<!-- Domande -->
+<div class="domanda attiva">
+  <h2>Domanda 1: Quale lato della Forza ti attrae di più?</h2>
+  <label><input type="radio" name="q0" value="jedi"> La luce e l'equilibrio</label>
+  <label><input type="radio" name="q0" value="sith"> Il potere e la passione</label>
+  <label><input type="radio" name="q0" value="grigio"> Entrambi, a seconda del momento</label>
+</div>
+
+<div class="domanda">
+  <h2>Domanda 2: Cosa faresti se qualcuno ti provocasse?</h2>
+  <label><input type="radio" name="q1" value="jedi"> Rimango calmo e ragiono</label>
+  <label><input type="radio" name="q1" value="sith"> Colpirei subito con forza</label>
+  <label><input type="radio" name="q1" value="grigio"> Dipende dalla situazione</label>
+</div>
+
+<button id="next">Avanti</button>
+
+<div id="output"></div>
+<button id="ricomincia" style="display:none;">🔄 Ricomincia il Quiz</button>
+
+<script>
+let domandaCorrente = 0;
+const domande = document.querySelectorAll(".domanda");
+const nextBtn = document.getElementById("next");
+const ricominciaBtn = document.getElementById("ricomincia");
+const progressBar = document.getElementById("progress-bar");
+
+let punteggi = { jedi:0, sith:0, grigio:0 };
+
+function aggiornaProgress(){
+  progressBar.style.width = ((domandaCorrente)/domande.length*100)+"%";
+}
+
+nextBtn.addEventListener("click", function(){
+  const selected = document.querySelector('input[name="q'+domandaCorrente+'"]:checked');
+  if(!selected){ alert("Seleziona una risposta!"); return; }
+  punteggi[selected.value]++;
+  domande[domandaCorrente].classList.remove("attiva");
+  domandaCorrente++;
+  if(domandaCorrente<domande.length){
+    domande[domandaCorrente].classList.add("attiva");
+  } else { mostraRisultato(); }
+  aggiornaProgress();
+});
+
+function mostraRisultato(){
+  const output = document.getElementById("output");
+  let esito="⚖️ Jedi Grigio – cammini tra luce e oscurità";
+  let colore="#a080ff", shadow="0 0 20px #a080ff";
+  if(punteggi.jedi>punteggi.sith && punteggi.jedi>punteggi.grigio){
+    esito="🟦 Jedi – segui la luce e l’equilibrio della Forza";
+    colore="#3f8cff"; shadow="0 0 25px #3f8cff";
+  } else if(punteggi.sith>punteggi.jedi && punteggi.sith>punteggi.grigio){
+    esito="🟥 Sith – la passione e il potere guidano le tue scelte";
+    colore="#c62828"; shadow="0 0 25px #c62828";
+  }
+  output.innerText=`Punteggi finali:\nJedi: ${punteggi.jedi}\nSith: ${punteggi.sith}\nJedi Grigio: ${punteggi.grigio}\n\n${esito}`;
+  output.style.color=colore;
+  output.style.textShadow=shadow;
+  nextBtn.style.display="none";
+  ricominciaBtn.style.display="inline-block";
+  progressBar.style.width="100%";
+}
+
+ricominciaBtn.addEventListener("click", function(){
+  punteggi={jedi:0,sith:0,grigio:0};
+  domandaCorrente=0;
+  domande.forEach(d=>d.classList.remove("attiva"));
+  domande[0].classList.add("attiva");
+  document.getElementById("output").innerText="";
+  document.getElementById("output").style.color="#f5f5f5";
+  document.getElementById("output").style.textShadow="none";
+  nextBtn.style.display="inline-block";
+  ricominciaBtn.style.display="none";
+  aggiornaProgress();
+});
+
+/* PWA: service worker registrazione */
+if("serviceWorker" in navigator){
+  navigator.serviceWorker.register("service-worker.js");
+}
+
+</script>
+</body>
+</html>
