--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 /* Corpo e sfondo */
 body {
   font-family: 'Orbitron', sans-serif;
-  background: radial-gradient(#000000, #0b0b0b); /* sfondo spaziale scuro */
+  background: radial-gradient(#000000, #0b0b0b);
   color: #f5f5f5;
   max-width: 600px;
   margin: 0 auto;
@@ -26,14 +26,26 @@ body {
   position: relative;
 }
 
-/* Stelle animate: semplice pattern visibile subito */
+/* Stelle animate con CSS puro */
 body::before {
   content:"";
-  position:fixed;
+  position: fixed;
   top:0; left:0;
   width:100%; height:100%;
-  background: url('https://i.imgur.com/5MZkW5X.png') repeat; /* pattern di stelle */
-  z-index:-1;
+  z-index: -1;
+  background: transparent;
+  box-shadow:
+    10vw 20vh white,50vw 30vh white,70vw 80vh white,
+    20vw 70vh white,90vw 10vh white,40vw 40vh white,
+    60vw 60vh white,30vw 20vh white,80vw 50vh white,
+    15vw 85vh white,25vw 15vh white,75vw 25vh white,
+    5vw 90vh white,85vw 5vh white,55vw 75vh white;
+  animation: stars 15s linear infinite;
+}
+@keyframes stars {
+  0% { transform: translateY(0) translateX(0); }
+  50% { transform: translateY(-2px) translateX(1px); }
+  100% { transform: translateY(0) translateX(0); }
 }
 
 /* Titoli */
@@ -206,7 +218,6 @@ ricominciaBtn.addEventListener("click", function(){
 if("serviceWorker" in navigator){
   navigator.serviceWorker.register("service-worker.js");
 }
-
 </script>
 </body>
 </html>
