--- a/index.html
+++ b/index.html
@@ -49,9 +49,6 @@ button:active::before { box-shadow:0 0 60px #3f8cff,0 0 100px #3f8cff inset; opa
 
 #output { margin-top:20px; padding:15px; border-radius:12px; background: rgba(0,0,0,0.6); white-space: pre-line; text-align:left; position:relative; }
 
-#chart { margin-top:20px; height:150px; width:100%; display:flex; justify-content:space-around; align-items:flex-end; }
-.bar { width:30%; border-radius:6px; display:flex; align-items:flex-end; justify-content:center; color:white; font-weight:bold; transition: all 0.5s ease; }
-
 #socials { margin-top:30px; display:none; justify-content:center; gap:30px; }
 
 @media(max-width:480px){
@@ -83,9 +80,9 @@ button:active::before { box-shadow:0 0 60px #3f8cff,0 0 100px #3f8cff inset; opa
 
 <button id="next">Avanti</button>
 <div id="output"></div>
-<div id="chart"></div>
+<canvas id="chart" width="300" height="300" style="margin-top:20px;"></canvas>
 <button id="ricomincia" style="display:none;">🔄 Ricomincia il Quiz</button>
-<div id="socials"></div>
+  <div id="socials"></div>
 
 <script>
 let domandaCorrente=0;
@@ -93,7 +90,8 @@ const domande=document.querySelectorAll(".domanda");
 const nextBtn=document.getElementById("next");
 const ricominciaBtn=document.getElementById("ricomincia");
 const progressBar=document.getElementById("progress-bar");
-const chartDiv=document.getElementById("chart");
+const chartCanvas=document.getElementById("chart");
+const ctxChart=chartCanvas.getContext("2d");
 const socialsDiv=document.getElementById("socials");
 let punteggi={jedi:0,sith:0,grigio:0};
 
@@ -128,7 +126,6 @@ function mostraRisultato(){
   const percSith = ((punteggi.sith/totale)*100).toFixed(0);
   const percGrigio = ((punteggi.grigio/totale)*100).toFixed(0);
 
-  // testo risultato
   output.innerText=`Punteggi finali:\nJedi: ${punteggi.jedi} (${percJedi}%)\nSith: ${punteggi.sith} (${percSith}%)\nJedi Grigio: ${punteggi.grigio} (${percGrigio}%)\n\n${esito}`;
   output.style.color=colore;
   output.style.textShadow=`0 0 25px ${colore},0 0 50px ${colore}`;
@@ -151,16 +148,35 @@ function mostraRisultato(){
     output.appendChild(p);
   }
 
-  // ---- grafico barre statistiche ----
-  chartDiv.innerHTML="";
-  const data=[{label:"Jedi",value:percJedi,color:"#3f8cff"},{label:"Sith",value:percSith,color:"#c62828"},{label:"Grigio",value:percGrigio,color:"#a080ff"}];
+  // ---- grafico a torta ----
+  ctxChart.clearRect(0,0,chartCanvas.width,chartCanvas.height);
+  const data = [
+    {label:"Jedi", value:punteggi.jedi, color:"#3f8cff"},
+    {label:"Sith", value:punteggi.sith, color:"#c62828"},
+    {label:"Grigio", value:punteggi.grigio, color:"#a080ff"}
+  ];
+  let startAngle = -0.5 * Math.PI;
   data.forEach(d=>{
-    const bar=document.createElement("div");
-    bar.className="bar";
-    bar.style.height=d.value+"%";
-    bar.style.background=d.color;
-    bar.innerText=d.value+"%";
-    chartDiv.appendChild(bar);
+    const sliceAngle = (d.value/totale) * 2 * Math.PI;
+    ctxChart.beginPath();
+    ctxChart.moveTo(150,150);
+    ctxChart.arc(150,150,120,startAngle,startAngle+sliceAngle);
+    ctxChart.closePath();
+    ctxChart.fillStyle=d.color;
+    ctxChart.fill();
+    
+    // etichetta percentuale
+    const midAngle = startAngle + sliceAngle/2;
+    const labelX = 150 + Math.cos(midAngle)*80;
+    const labelY = 150 + Math.sin(midAngle)*80;
+    ctxChart.fillStyle="#fff";
+    ctxChart.font="16px 'Orbitron'";
+    ctxChart.textAlign="center";
+    ctxChart.textBaseline="middle";
+    const perc = totale===0?0:Math.round((d.value/totale)*100)+"%";
+    ctxChart.fillText(perc,labelX,labelY);
+
+    startAngle += sliceAngle;
   });
 
   // ---- social links ----
@@ -186,7 +202,6 @@ function mostraRisultato(){
   socialsDiv.style.display="flex";
 }
 
-// Animazione float Up particelle Forza
 const style=document.createElement("style");
 style.innerHTML=`@keyframes floatUp {0%{transform:translateY(0);opacity:1;}100%{transform:translateY(-100px);opacity:0;}}`;
 document.head.appendChild(style);
@@ -199,7 +214,7 @@ ricominciaBtn.addEventListener("click",function(){
   document.getElementById("output").innerText="";
   document.getElementById("output").style.color="#f5f5f5";
   document.getElementById("output").style.textShadow="none";
-  chartDiv.innerHTML="";
+  ctxChart.clearRect(0,0,chartCanvas.width,chartCanvas.height);
   socialsDiv.innerHTML="";
   socialsDiv.style.display="none";
   nextBtn.style.display="inline-block";
