--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@ body {
 }
 #stars { position: fixed; top:0; left:0; width:100%; height:100%; z-index: -1; background: black; }
 
+#chart {
+  display: block;
+  margin: 20px auto; /* centra orizzontalmente */
+}
+
+#ricomincia {
+  display: block;
+  margin: 20px auto; /* centra il bottone */
+}
+
 h1 { color: #ffe81f; letter-spacing:2px; margin-bottom:10px; }
 h2 { margin-top:0; }
 
