--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@ button:active::before { box-shadow:0 0 60px #3f8cff,0 0 100px #3f8cff inset; opa
 </style>
 </head>
 <body>
+  <!-- Logo in cima -->
+<img src="logo.jpg" alt="Logo JGForceQuiz" style="width:80px; height:auto; display:block; margin: 0 auto 20px;">
+
 <canvas id="stars"></canvas>
 <h1>Quiz della Forza</h1>
 <p style="font-size:12px; opacity:0.7;">Scopri se sei Jedi, Sith o Jedi Grigio</p>
