--- a/index.html
+++ b/index.html
@@ -39,43 +39,14 @@ h2 { margin-top:0; }
 .domanda.attiva { display:block; animation: fadeInUp 0.5s ease forwards; }
 .domanda.esci { animation: fadeOutDown 0.5s ease forwards; }
 
-/* ==========================
-   Radio button invisibili
-========================== */
-input[type="radio"] {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  opacity: 0;
-  width: 0;
-  height: 0;
-  position: absolute;
+label { display:block; background: rgba(255,255,255,0.05); border-radius:8px; padding:12px; margin:12px 0; cursor:pointer; transition: all 0.3s; }
+
+/* Rimuove l’alone blu su tap mobile */
+label, button, a {
+  -webkit-tap-highlight-color: transparent;
 }
 
-/* Etichette cliccabili con effetto glow */
-label {
-  display:block;
-  background: rgba(255,255,255,0.05);
-  border-radius:8px;
-  padding:12px;
-  margin:12px 0;
-  cursor:pointer;
-  transition: all 0.3s;
-  position: relative;
-  color: #f5f5f5;
-}
-label span {
-  display: inline-block;
-  transition: all 0.3s;
-}
-/* effetto quando selezionato */
-input[type="radio"]:checked + span {
-  background: linear-gradient(90deg,#3f8cff,#ffe81f);
-  color: #000;
-  padding: 12px;
-  border-radius: 8px;
-  box-shadow: 0 0 15px #3f8cff,0 0 30px #ffe81f inset;
-}
+input[type="radio"] { accent-color:#ffe81f; margin-right:10px; }
 
 button {
   margin-top:25px; padding:16px 36px; font-size:18px; font-family:'Orbitron',sans-serif;
@@ -114,16 +85,16 @@ button:active::before { box-shadow:0 0 60px #3f8cff,0 0 100px #3f8cff inset; opa
 <!-- Domande -->
 <div class="domanda attiva">
   <h2>Domanda 1: Quale lato della Forza ti attrae di più?</h2>
-  <label><input type="radio" name="q0" value="jedi"><span>La luce e l'equilibrio</span></label>
-  <label><input type="radio" name="q0" value="sith"><span>Il potere e la passione</span></label>
-  <label><input type="radio" name="q0" value="grigio"><span>Entrambi, a seconda del momento</span></label>
+  <label><input type="radio" name="q0" value="jedi"> La luce e l'equilibrio</label>
+  <label><input type="radio" name="q0" value="sith"> Il potere e la passione</label>
+  <label><input type="radio" name="q0" value="grigio"> Entrambi, a seconda del momento</label>
 </div>
 
 <div class="domanda">
   <h2>Domanda 2: Cosa faresti se qualcuno ti provocasse?</h2>
-  <label><input type="radio" name="q1" value="jedi"><span>Rimango calmo e ragiono</span></label>
-  <label><input type="radio" name="q1" value="sith"><span>Colpirei subito con forza</span></label>
-  <label><input type="radio" name="q1" value="grigio"><span>Dipende dalla situazione</span></label>
+  <label><input type="radio" name="q1" value="jedi"> Rimango calmo e ragiono</label>
+  <label><input type="radio" name="q1" value="sith"> Colpirei subito con forza</label>
+  <label><input type="radio" name="q1" value="grigio"> Dipende dalla situazione</label>
 </div>
 
 <button id="next">Avanti</button>
@@ -133,9 +104,6 @@ button:active::before { box-shadow:0 0 60px #3f8cff,0 0 100px #3f8cff inset; opa
 <div id="socials"></div>
 
 <script>
-// ==========================
-// Script invariato con tutte le funzionalità già presenti
-// ==========================
 let domandaCorrente=0;
 const domande=document.querySelectorAll(".domanda");
 const nextBtn=document.getElementById("next");
@@ -155,7 +123,7 @@ nextBtn.addEventListener("click",function(){
 
   const currentDomanda = domande[domandaCorrente];
   currentDomanda.classList.add("esci"); 
-  setTimeout(()=>{
+  setTimeout(()=>{ 
     currentDomanda.classList.remove("attiva","esci");
     domandaCorrente++;
     if(domandaCorrente<domande.length){
@@ -190,7 +158,8 @@ function mostraRisultato(){
   for(let i=0;i<50;i++){
     const p=document.createElement("div");
     p.style.position="absolute";
-    p.style.width="6px"; p.style.height="6px"; p.style.borderRadius="50%";
+    p.style.width="6px"; p.style.height="6px"; 
+    p.style.borderRadius="50%";
     p.style.background=colore;
     p.style.left=(Math.random()*output.offsetWidth)+"px";
     p.style.top=(Math.random()*output.offsetHeight)+"px";
@@ -216,22 +185,41 @@ function mostraRisultato(){
     ctxChart.fillStyle=d.color;
     ctxChart.fill();
     
-    // etichetta percentuale solo se > 0
+    // etichetta percentuale solo se >0
     const midAngle = startAngle + sliceAngle/2;
     const labelX = 150 + Math.cos(midAngle)*80;
     const labelY = 150 + Math.sin(midAngle)*80;
-    ctxChart.fillStyle="#fff";
-    ctxChart.font="16px 'Orbitron'";
-    ctxChart.textAlign="center";
-    ctxChart.textBaseline="middle";
     const perc = totale===0 ? 0 : Math.round((d.value/totale)*100);
-    if (perc > 0) ctxChart.fillText(perc+"%", labelX, labelY);
-
+    if (perc > 0) {
+      ctxChart.fillStyle="#fff";
+      ctxChart.font="16px 'Orbitron'";
+      ctxChart.textAlign="center";
+      ctxChart.textBaseline="middle";
+      ctxChart.fillText(perc+"%", labelX, labelY);
+    }
     startAngle += sliceAngle;
   });
 
   // ---- social links ----
-  socialsDiv.innerHTML = `...`; // rimane invariato
+  socialsDiv.innerHTML = `
+    <a href="https://www.instagram.com/jgacademy.national" target="_blank" style="text-decoration:none;">
+      <svg width="40" height="40" viewBox="0 0 24 24" fill="#E1306C" xmlns="http://www.w3.org/2000/svg">
+        <path d="M7.75 2h8.5C19.55 2 22 4.45 22 7.75v8.5C22 19.55 19.55 22 16.25 22h-8.5C4.45 22 2 19.55 2 16.25v-8.5C2 4.45 4.45 2 7.75 2zm0 1.5C5.68 3.5 4 5.18 4 7.25v8.5C4 18.32 5.68 20 7.75 20h8.5c2.07 0 3.75-1.68 3.75-3.75v-8.5C20 5.18 18.32 3.5 16.25 3.5h-8.5z"/>
+        <path d="M12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10zm0 1.5a3.5 3.5 0 1 0 0 7 3.5 3.5 0 0 0 0-7zM17.5 6.5a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+      </svg>
+    </a>
+    <a href="https://www.instagram.com/jgacademy.pavia" target="_blank" style="text-decoration:none;">
+      <svg width="40" height="40" viewBox="0 0 24 24" fill="#E1306C" xmlns="http://www.w3.org/2000/svg">
+        <path d="M7.75 2h8.5C19.55 2 22 4.45 22 7.75v8.5C22 19.55 19.55 22 16.25 22h-8.5C4.45 22 2 19.55 2 16.25v-8.5C2 4.45 4.45 2 7.75 2zm0 1.5C5.68 3.5 4 5.18 4 7.25v8.5C4 18.32 5.68 20 7.75 20h8.5c2.07 0 3.75-1.68 3.75-3.75v-8.5C20 5.18 18.32 3.5 16.25 3.5h-8.5z"/>
+        <path d="M12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10zm0 1.5a3.5 3.5 0 1 0 0 7 3.5 3.5 0 0 0 0-7zM17.5 6.5a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+      </svg>
+    </a>
+    <a href="https://www.tiktok.com/@jgacademy.pavia" target="_blank" style="text-decoration:none;">
+      <svg width="40" height="40" viewBox="0 0 24 24" fill="#69C9D0" xmlns="http://www.w3.org/2000/svg">
+        <path d="M12 2v7.5a4.5 4.5 0 1 0 4.5 4.5V7.5h3V2h-7.5z"/>
+      </svg>
+    </a>
+  `;
   socialsDiv.style.display="flex";
 }
 
@@ -265,7 +253,4 @@ const numStars=150;
 for(let i=0;i<numStars;i++){ stars.push({ x:Math.random()*width, y:Math.random()*height, r:Math.random()*1.5+0.5, dx:(Math.random()-0.5)/2, dy:(Math.random()-0.5)/2 }); }
 function animateStars(){ ctx.clearRect(0,0,width,height); for(let s of stars){ ctx.beginPath(); ctx.arc(s.x,s.y,s.r,0,Math.PI*2); ctx.fillStyle="white"; ctx.fill(); s.x+=s.dx; s.y+=s.dy; if(s.x<0)s.x=width; if(s.x>width)s.x=0; if(s.y<0)s.y=height; if(s.y>height)s.y=0; } requestAnimationFrame(animateStars); }
 animateStars();
-window.addEventListener('resize',()=>{ width=canvas.width=window.innerWidth; height=canvas.height=window.innerHeight; });
-</script>
-</body>
-</html>
+window.addEventListener('resize',()=>{ width=canvas.width=window.innerWidth; height=canvas.height=window.innerHeight;
