--- a/index.html
+++ b/index.html
@@ -16,17 +16,18 @@ body {
   overflow-x: hidden;
   background: black;
   position: relative;
+  -webkit-tap-highlight-color: transparent; /* rimuove alone blu su mobile */
 }
 #stars { position: fixed; top:0; left:0; width:100%; height:100%; z-index: -1; background: black; }
 
 #chart {
   display: block;
-  margin: 20px auto; /* centra orizzontalmente */
+  margin: 20px auto;
 }
 
 #ricomincia {
   display: block;
-  margin: 20px auto; /* centra il bottone */
+  margin: 20px auto;
 }
 
 h1 { color: #ffe81f; letter-spacing:2px; margin-bottom:10px; }
@@ -39,14 +40,24 @@ h2 { margin-top:0; }
 .domanda.attiva { display:block; animation: fadeInUp 0.5s ease forwards; }
 .domanda.esci { animation: fadeOutDown 0.5s ease forwards; }
 
-label { display:block; background: rgba(255,255,255,0.05); border-radius:8px; padding:12px; margin:12px 0; cursor:pointer; transition: all 0.3s; }
-
-/* Rimuove l’alone blu su tap mobile */
-label, button, a {
-  -webkit-tap-highlight-color: transparent;
+/* --- Etichette cliccabili come pulsanti --- */
+label {
+  display:block;
+  background: rgba(255,255,255,0.05);
+  border-radius:8px;
+  padding:12px;
+  margin:12px 0;
+  cursor:pointer;
+  transition: all 0.3s;
+}
+label:hover {
+  background: rgba(255,255,255,0.15);
 }
 
-input[type="radio"] { accent-color:#ffe81f; margin-right:10px; }
+/* --- Radio button nascosti --- */
+input[type="radio"] {
+  display: none;
+}
 
 button {
   margin-top:25px; padding:16px 36px; font-size:18px; font-family:'Orbitron',sans-serif;
@@ -74,8 +85,7 @@ button:active::before { box-shadow:0 0 60px #3f8cff,0 0 100px #3f8cff inset; opa
 </style>
 </head>
 <body>
-  <!-- Logo in cima -->
-<img src="logo.png" style="width:150px; height:auto; display:block; margin: 0 auto 20px;">
+  <img src="logo.png" style="width:150px; height:auto; display:block; margin: 0 auto 20px;">
 
 <canvas id="stars"></canvas>
 <h1>Quiz della Forza</h1>
@@ -123,7 +133,7 @@ nextBtn.addEventListener("click",function(){
 
   const currentDomanda = domande[domandaCorrente];
   currentDomanda.classList.add("esci"); 
-  setTimeout(()=>{ 
+  setTimeout(()=>{
     currentDomanda.classList.remove("attiva","esci");
     domandaCorrente++;
     if(domandaCorrente<domande.length){
@@ -158,8 +168,7 @@ function mostraRisultato(){
   for(let i=0;i<50;i++){
     const p=document.createElement("div");
     p.style.position="absolute";
-    p.style.width="6px"; p.style.height="6px"; 
-    p.style.borderRadius="50%";
+    p.style.width="6px"; p.style.height="6px"; p.style.borderRadius="50%";
     p.style.background=colore;
     p.style.left=(Math.random()*output.offsetWidth)+"px";
     p.style.top=(Math.random()*output.offsetHeight)+"px";
@@ -186,29 +195,24 @@ function mostraRisultato(){
     ctxChart.fill();
     
     // etichetta percentuale solo se >0
-    const midAngle = startAngle + sliceAngle/2;
-    const labelX = 150 + Math.cos(midAngle)*80;
-    const labelY = 150 + Math.sin(midAngle)*80;
     const perc = totale===0 ? 0 : Math.round((d.value/totale)*100);
-    if (perc > 0) {
+    if (perc>0) {
+      const midAngle = startAngle + sliceAngle/2;
+      const labelX = 150 + Math.cos(midAngle)*80;
+      const labelY = 150 + Math.sin(midAngle)*80;
       ctxChart.fillStyle="#fff";
       ctxChart.font="16px 'Orbitron'";
       ctxChart.textAlign="center";
       ctxChart.textBaseline="middle";
       ctxChart.fillText(perc+"%", labelX, labelY);
     }
+
     startAngle += sliceAngle;
   });
 
   // ---- social links ----
   socialsDiv.innerHTML = `
     <a href="https://www.instagram.com/jgacademy.national" target="_blank" style="text-decoration:none;">
-      <svg width="40" height="40" viewBox="0 0 24 24" fill="#E1306C" xmlns="http://www.w3.org/2000/svg">
-        <path d="M7.75 2h8.5C19.55 2 22 4.45 22 7.75v8.5C22 19.55 19.55 22 16.25 22h-8.5C4.45 22 2 19.55 2 16.25v-8.5C2 4.45 4.45 2 7.75 2zm0 1.5C5.68 3.5 4 5.18 4 7.25v8.5C4 18.32 5.68 20 7.75 20h8.5c2.07 0 3.75-1.68 3.75-3.75v-8.5C20 5.18 18.32 3.5 16.25 3.5h-8.5z"/>
-        <path d="M12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10zm0 1.5a3.5 3.5 0 1 0 0 7 3.5 3.5 0 0 0 0-7zM17.5 6.5a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
-      </svg>
-    </a>
-    <a href="https://www.instagram.com/jgacademy.pavia" target="_blank" style="text-decoration:none;">
       <svg width="40" height="40" viewBox="0 0 24 24" fill="#E1306C" xmlns="http://www.w3.org/2000/svg">
         <path d="M7.75 2h8.5C19.55 2 22 4.45 22 7.75v8.5C22 19.55 19.55 22 16.25 22h-8.5C4.45 22 2 19.55 2 16.25v-8.5C2 4.45 4.45 2 7.75 2zm0 1.5C5.68 3.5 4 5.18 4 7.25v8.5C4 18.32 5.68 20 7.75 20h8.5c2.07 0 3.75-1.68 3.75-3.75v-8.5C20 5.18 18.32 3.5 16.25 3.5h-8.5z"/>
         <path d="M12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10zm0 1.5a3.5 3.5 0 1 0 0 7 3.5 3.5 0 0 0 0-7zM17.5 6.5a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
@@ -253,4 +257,7 @@ const numStars=150;
 for(let i=0;i<numStars;i++){ stars.push({ x:Math.random()*width, y:Math.random()*height, r:Math.random()*1.5+0.5, dx:(Math.random()-0.5)/2, dy:(Math.random()-0.5)/2 }); }
 function animateStars(){ ctx.clearRect(0,0,width,height); for(let s of stars){ ctx.beginPath(); ctx.arc(s.x,s.y,s.r,0,Math.PI*2); ctx.fillStyle="white"; ctx.fill(); s.x+=s.dx; s.y+=s.dy; if(s.x<0)s.x=width; if(s.x>width)s.x=0; if(s.y<0)s.y=height; if(s.y>height)s.y=0; } requestAnimationFrame(animateStars); }
 animateStars();
-window.addEventListener('resize',()=>{ width=canvas.width=window.innerWidth; height=canvas.height=window.innerHeight;
+window.addEventListener('resize',()=>{ width=canvas.width=window.innerWidth; height=canvas.height=window.innerHeight; });
+</script>
+</body>
+</html>
