--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@ transition: all 0.3s;
 label:hover {
 background: rgba(255,255,255,0.15);
 }
+label:active {
+  background: rgba(255,255,255,0.25);
+  transform: scale(0.98);
+}
 
 /* --- Radio button nascosti --- */
 input[type="radio"] {
