--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@ body{padding:20px 15px;} h1{font-size:24px;} h2{font-size:18px;} label{font-size
 </div>
 
 <div class="domanda">
-  <h2>Quale colore preferisci?</h2>
-  <label><input type="radio" name="q6" value="sith">Rosso</label>
-  <label><input type="radio" name="q6" value="jedi">Verde</label>
-  <label><input type="radio" name="q6" value="grigio">Viola</label>
+  <h2>Quale saga preferisci?</h2>
+  <label><input type="radio" name="q6" value="sith">Trilogia Prequel (La Minaccia Fantasma, L'Attacco dei Cloni, La vendetta dei Sith)</label>
+  <label><input type="radio" name="q6" value="jedi">Trilogia Originale (Una Nuova Speranza, L'Impero Colpisce Ancora, Il Ritorno dello Jedi)</label>
+  <label><input type="radio" name="q6" value="grigio">Spin-Off (Rogue One, Solo)</label>
 </div>
 
 <div class="domanda">
