--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@ body{padding:20px 15px;} h1{font-size:24px;} h2{font-size:18px;} label{font-size
 <div class="domanda">
   <h2>Chi vorresti come maestro?</h2>
   <label><input type="radio" name="q3" value="jedi">Obi-Wan Kenobi</label>
-  <label><input type="radio" name="q3" value="sith">Conte Dooku</label>
-  <label><input type="radio" name="q3" value="grigio">Mace Windu</label>
+  <label><input type="radio" name="q3" value="sith">Palpatine</label>
+  <label><input type="radio" name="q3" value="grigio">Ahsoka Tano</label>
 </div>
 
 <div class="domanda">
@@ -139,7 +139,7 @@ body{padding:20px 15px;} h1{font-size:24px;} h2{font-size:18px;} label{font-size
 <div class="domanda">
   <h2>Quale valore è per te più importante?</h2>
   <label><input type="radio" name="q5" value="jedi">Pace</label>
-  <label><input type="radio" name="q5" value="grigio">Giustizia</label>
+  <label><input type="radio" name="q5" value="grigio">Equilibrio</label>
   <label><input type="radio" name="q5" value="sith">Libertà</label>
 </div>
 
